# openec

./: .gitignore  CMakeLists.txt  README.md
conf/: sysSetting.xml
crail-integration/: install.sh
crail-integration/conf/: core-site.xml  crail-site.conf
crail-integration/src/: BlockStore.java  CrailConstants.java  CrailUtils.java  FileName.java  HddStorageServer.java  HddStorageTier.java  NameNodeService.java  StorageRpcClient.java  StorageServer.java  TcpStorageConstants.java  TcpStorageServer.java  pom.xml
doc/: doc.tex
hadoop-3.0-helper/: compile.sh
hadoop-3.0-helper/oec/protocol/: AGCommand.java  CoorCommand.java
hdfs3-integration/: compile.sh  install.sh
hdfs3-integration/conf/: core-site.xml  hadoop-env.sh  hdfs-site.xml  user_ec_policies.xml
hdfs3-integration/src/: BlockManager.java  BlockPlacementPolicy.java  BlockPlacementPolicyDefault.java  BlockPlacementPolicyOEC.java  CommandWithDestination.java  DFSInputStream.java  FSDirWriteFileOp.java  FSNamesystem.java  LowRedundancyBlocks.java  NameNodeRpcServer.java  NetworkTopology.java  hdfs.c  pom.xml
hdfsraid-integration/: install.sh
hdfsraid-integration/conf/: core-site.xml  hadoop-env.sh  hdfs-site.xml  masters  rackAware.sh  raid.xml  slaves
hdfsraid-integration/oec/protocol/: CoorCommand.java
hdfsraid-integration/src/: BlockPlacementPolicyOEC.java  DFSInputStream.java  DistBlockIntegrityMonitor.java  DistRaidNode.java  FSNamesystem.java  HadoopPipes.cc  Makefile.am  Makefile.in  NameNode.java  NativeJerasure.c  NativeJerasure.h  NetworkTopology.java  PlacementMonitor.java  PurgeMonitor.java  RaidNode.java  build.xml
qfs-integration/: install.sh
qfs-integration/conf/: ChunkServer.conf  MetaServer.conf
qfs-integration/src/: CMakeLists.txt  CoorCommand.cc  CoorCommand.h  LayoutManager.cc  LayoutManager.h  MetaRequest.cc  Reader.cc  cpfromqfs_main.cc  cptoqfs_main.cc
script/: createconf.py  createhiconf.py  env.sh  start.py  startcoor.py  stop.py  stopcoor.py
src/: CMakeLists.txt  CodeTest.cc  ECDAGTest.cc  HDFSClient.cc  OECAgent.cc  OECClient.cc  OECCoordinator.cc
src/common/: BlockingQueue.hh  CMakeLists.txt  CmdDistributor.cc  CmdDistributor.hh  Config.cc  Config.hh  CoorBench.cc  CoorBench.hh  Coordinator.cc  Coordinator.hh  FSObjInputStream.cc  FSObjInputStream.hh  FSObjOutputStream.cc  FSObjOutputStream.hh  OECDataPacket.cc  OECDataPacket.hh  OECInputStream.cc  OECInputStream.hh  OECOutputStream.cc  OECOutputStream.hh  OECWorker.cc  OECWorker.hh  SSEntry.cc  SSEntry.hh  StripeStore.cc  StripeStore.hh
src/ec/: BUTTERFLY64.cc  BUTTERFLY64.hh  CMakeLists.txt  Cluster.cc  Cluster.hh  Computation.cc  Computation.hh  DRC643.cc  DRC643.hh  DRC963.cc  DRC963.hh  ECBase.cc  ECBase.hh  ECDAG.cc  ECDAG.hh  ECNode.cc  ECNode.hh  ECPolicy.cc  ECPolicy.hh  ECTask.cc  ECTask.hh  IA.cc  IA.hh  NativeRS.cc  NativeRS.hh  OfflineECPool.cc  OfflineECPool.hh  RSBINDX.cc  RSBINDX.hh  RSCONV.cc  RSCONV.hh  RSPIPE.cc  RSPIPE.hh  RSPPR.cc  RSPPR.hh  WASLRC.cc  WASLRC.hh
src/fs/: CMakeLists.txt  FSUtil.cc  FSUtil.hh  Hadoop20.cc  Hadoop20.hh  Hadoop20File.cc  Hadoop20File.hh  Hadoop3.cc  Hadoop3.hh  Hadoop3File.cc  Hadoop3File.hh  QFS.cc  QFS.hh  QFSFile.cc  QFSFile.hh  QuantcastFS.cc  QuantcastFS.hh  UnderFS.cc  UnderFS.hh  UnderFile.cc  UnderFile.hh
src/inc/: include.hh
src/protocol/: AGCommand.cc  AGCommand.hh  CMakeLists.txt  CoorCommand.cc  CoorCommand.hh
src/util/: CMakeLists.txt  KfsAttr.h  RedisUtil.cc  RedisUtil.hh
