aux_source_directory(. DIR_LIB_SRCS)
add_library (fs ${DIR_LIB_SRCS})
add_library(hdfs SHARED IMPORTED)
#set(libhdfs "$ENV{HADOOP_HOME}/lib/native/libhdfs.so")
#message("libhdfs: ${libhdfs}")
set_property(TARGET hdfs PROPERTY IMPORTED_LOCATION "$ENV{HADOOP_HOME}/lib/native/libhdfs.so")
add_library(jvm SHARED IMPORTED)
set_property(TARGET jvm PROPERTY IMPORTED_LOCATION "$ENV{JAVA_HOME}/jre/lib/amd64/server/libjvm.so")
target_link_libraries(fs hdfs jvm)
