aux_source_directory(. DIR_LIB_SRCS)
add_library (fs ${DIR_LIB_SRCS})
add_library(hdfs SHARED IMPORTED)
set_property(TARGET hdfs PROPERTY IMPORTED_LOCATION "$ENV{HADOOP_HOME}/lib/native/libhdfs.so")
add_library(jvm SHARED IMPORTED)
set_property(TARGET jvm PROPERTY IMPORTED_LOCATION "$ENV{JAVA_HOME}/jre/lib/amd64/server/libjvm.so")
add_library(libqfs_client SHARED IMPORTED)
set_property(TARGET libqfs_client PROPERTY IMPORTED_LOCATION "$ENV{QFS_HOME}/build/release/lib/libqfs_client.so")
add_library(libqfs_access SHARED IMPORTED)
set_property(TARGET libqfs_access PROPERTY IMPORTED_LOCATION "$ENV{QFS_HOME}/build/release/lib/libqfs_access.so")
add_library(libqfs_common SHARED IMPORTED)
set_property(TARGET libqfs_common PROPERTY IMPORTED_LOCATION "$ENV{QFS_HOME}/build/release/lib/libqfs_common.so")
add_library(libqfs_io SHARED IMPORTED)
set_property(TARGET libqfs_io PROPERTY IMPORTED_LOCATION "$ENV{QFS_HOME}/build/release/lib/libqfs_io.so")
add_library(libqfs_qcdio SHARED IMPORTED)
set_property(TARGET libqfs_qcdio PROPERTY IMPORTED_LOCATION "$ENV{QFS_HOME}/build/release/lib/libqfs_qcdio.so")
add_library(libqfs_qcrs SHARED IMPORTED)
set_property(TARGET libqfs_qcrs PROPERTY IMPORTED_LOCATION "$ENV{QFS_HOME}/build/release/lib/libqfs_qcrs.so")

if (${FS_TYPE} MATCHES "HDFS3")
    target_link_libraries(fs hdfs jvm)
endif(${FS_TYPE} MATCHES "HDFS3")

if (${FS_TYPE} MATCHES "HDFSRAID")
    target_link_libraries(fs hdfs jvm)
endif(${FS_TYPE} MATCHES "HDFSRAID")

if (${FS_TYPE} MATCHES "QFS")
    target_link_libraries(fs libqfs_client libqfs_access libqfs_common libqfs_io libqfs_qcdio libqfs_qcrs)
endif(${FS_TYPE} MATCHES "QFS")
